@@ -103,33 +103,43 @@ class OliveStatus:
         else:
             delta = self.wt.changes_from(self.old_tree)
 
+        changes = False
+        
         if len(delta.added):
+            changes = True
             titer = self.model.append(None, [ _('Added'), None ])
             for path, id, kind in delta.added:
                 self.model.append(titer, [ path, path ])
 
         if len(delta.removed):
+            changes = True
             titer = self.model.append(None, [ _('Removed'), None ])
             for path, id, kind in delta.removed:
                 self.model.append(titer, [ path, path ])
 
         if len(delta.renamed):
+            changes = True
             titer = self.model.append(None, [ _('Renamed'), None ])
             for oldpath, newpath, id, kind, text_modified, meta_modified \
                     in delta.renamed:
                 self.model.append(titer, [ oldpath, newpath ])
 
         if len(delta.modified):
+            changes = True
             titer = self.model.append(None, [ _('Modified'), None ])
             for path, id, kind, text_modified, meta_modified in delta.modified:
                 self.model.append(titer, [ path, path ])
         
         done_unknown = False
         for path in self.wt.unknowns():
+            changes = True
             if not done_unknown:
                 titer = self.model.append(None, [ _('Unknown'), None ])
                 done_unknown = True
             self.model.append(titer, [ path, path ])
+
+        if not changes:
+            self.model.append(None, [ _('No changes.'), None ])
 
         self.treeview.expand_all()
     
